Simply and revert whitespace changes