@@ -370,11 +370,8 @@ public class Transform extends Plugin implements SystemIndexPlugin, PersistentTa
 
     @Override
     public Collection<SystemIndexDescriptor> getSystemIndexDescriptors(Settings settings) {
-        return List.of(
-            SystemIndexDescriptor.builder()
-                .setIndexPattern(TransformInternalIndexConstants.INDEX_NAME_PATTERN)
-                .setDescription("Contains Transform configuration data")
-                .build()
+        return Collections.singletonList(
+            new SystemIndexDescriptor(TransformInternalIndexConstants.INDEX_NAME_PATTERN, "Contains Transform configuration data")
         );
     }
 }
